labels custom checkbox

--- a/src/index.html
+++ b/src/index.html
@@ -511,7 +511,9 @@
                                         <div class="uk-margin">
                                             <div class="uk-form-controls" uk-grid>
                                                 <div>
-                                                    <a href="#" class="uk-button uk-button-small uk-button-simple-orange">С фото</a>
+                                                    <!--<a href="#" class="uk-button uk-button-small uk-button-simple-orange">С фото</a>-->
+                                                    <input class="uk-hidden" type="checkbox" id="form-checkbox-with-photo" name="form-checkbox-with-photo">
+                                                    <label for="form-checkbox-with-photo" class="uk-button uk-button-small uk-button-simple-orange">С фото</label>
                                                 </div>
                                                 <div>
                                                     <a href="#" class="uk-button uk-button-small uk-button-orange uk-text-untransformed">Найти</a>
