visas html add and adaptive

--- a/src/blogs.html
+++ b/src/blogs.html
@@ -864,7 +864,7 @@
                                     <!--Interesting in the world-->
                                     <div>
                                         <h3>Интересное в мире</h3>
-                                        <div class="uk-child-width-1-3@s uk-child-width-1-1@m uk-grid-small" uk-grid>
+                                        <div class="uk-child-width-1-3@s uk-child-width-1-1@m uk-grid-small" uk-grid uk-height-match="target: > div > .uk-card">
                                             <div>
                                                 <a href="#"
                                                    class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
@@ -911,7 +911,7 @@
                 <div class="uk-container">
                     <h2 class="uk-text-center">Архив блогов</h2>
 
-                    <div class="uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid>
+                    <div class="uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target: > div > .uk-card">
                         <div>
                             <a href="#"
                                class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
@@ -979,7 +979,6 @@
                     </div>
                 </div>
             </div>
-
 
         </div>
 
