--- a/src/index.html
+++ b/src/index.html
@@ -215,8 +215,8 @@
 
                 <div class="uk-section uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container uk-text-center">
-                        <h1><span class="uk-text-light">Поиск попутчиков</span> <br>
-                            в путешествие
+                        <h1>Поиск попутчиков <br>
+                            <span class="uk-text-medium">в путешествие</span>
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
                             <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
@@ -249,7 +249,7 @@
 
                             <div class="uk-child-width-expand" uk-grid uk-height-match="target: > div > .uk-card">
                                 <div>
-                                    <a href="#" class="uk-card uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                    <a href="#" class="uk-card uk-card-large uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
                                         <img src="images/image_interesting_big.jpg" alt="" uk-cover>
                                         <div class="uk-position-relative uk-text-lead">Мексиканские зарисовки. Путешествие по Юкатану с заездом в штат Чьяпас. Часть 4</div>
                                     </a>
@@ -463,7 +463,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="ul-flex-last@m">
+                                            <div class="uk-flex-last@m">
                                                 <div class="uk-margin">
                                                     <label class="uk-form-label" for="form-input-place">Куда</label>
                                                     <div class="uk-form-controls uk-inline uk-width-1-1">
@@ -508,7 +508,6 @@
                                         <div class="uk-margin">
                                             <div class="uk-form-controls" uk-grid>
                                                 <div>
-                                                    <!--<a href="#" class="uk-button uk-button-small uk-button-simple-orange">С фото</a>-->
                                                     <input class="uk-hidden" type="checkbox" id="form-checkbox-with-photo" name="form-checkbox-with-photo">
                                                     <label for="form-checkbox-with-photo" class="uk-button uk-button-small uk-button-simple-orange">С фото</label>
                                                 </div>
