--- a/src/visas.html
+++ b/src/visas.html
@@ -15,8 +15,8 @@
     <div class="uk-child-width-1-1 uk-height-viewport uk-flex uk-flex-wrap uk-flex-wrap-between">
         <div>
 
-            <!--Pageheader-->
-            <div class="tm-pageheader tm-pageheader-main uk-section uk-padding-remove uk-light">
+            <!-- Pageheader -->
+            <div class="tm-pageheader tm-pageheader-visas uk-section uk-padding-remove uk-light">
 
                 <!--Header-->
                 <header class="uk-navbar-container uk-position-relative">
@@ -213,40 +213,259 @@
                     </nav>
                 </header>
 
-                <div class="uk-section uk-position-relative uk-padding-remove-bottom">
+                <div class="uk-section uk-section-large uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container uk-text-center">
-                        <h1><span class="uk-text-light">Поиск попутчиков</span> <br>
-                            в путешествие
-                        </h1>
-                        <div class="uk-margin-xlarge-bottom">
-                            <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
+                        <h1>Визы</h1>
+                        <div class="uk-width-3-4@l uk-margin-auto uk-margin-xlarge-bottom">
+                            <form action="/">
+                                <div class="uk-margin">
+                                    <div class="uk-form-controls uk-inline uk-width-1-1">
+                                        <span class="uk-form-icon">
+                                            <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                        </span>
+                                        <span class="uk-form-icon uk-form-icon-flip">
+                                            <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                        </span>
+                                        <select class="uk-select uk-text-uppercase">
+                                            <option>Выберите страну</option>
+                                            <option>Абхазия</option>
+                                            <option>Австралия</option>
+                                            <option>Австрия</option>
+                                            <option>Азербайджан</option>
+                                            <option>Андорра</option>
+                                            <option>Аргентина</option>
+                                            <option>Армения</option>
+                                            <option>Багамы</option>
+                                            <option>Беларусь</option>
+                                            <option>Бельгия</option>
+                                            <option>Болгария</option>
+                                            <option>Бразилия</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </form>
+                            <a href="" class="uk-button uk-button-large uk-button-blue">Смотреть</a>
                         </div>
-                        <ul class="tm-social uk-iconnav uk-flex-center uk-flex-middle uk-margin-medium-bottom">
-                            <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
                     </div>
                 </div>
             </div>
 
+            <div class="uk-section uk-section-small">
+                <div class="uk-container">
+                    <div class="uk-child-width-expand@m" uk-grid>
 
+                        <!-- Schengen countries -->
+                        <div>
+                            <h2>Страны Шенгенского соглашения</h2>
+
+                            <div class="uk-padding uk-margin-bottom uk-background-muted">
+                                <p>В 2018 году список стран шенгенского соглашения выглядит так:</p>
+                                <ul class="uk-list uk-column-1-2 uk-column-1-4@s">
+                                    <li><a href="#">Австрия</a></li>
+                                    <li><a href="#">Бельгия</a></li>
+                                    <li><a href="#">Венгрия</a></li>
+                                    <li><a href="#">Германия</a></li>
+                                    <li><a href="#">Греция</a></li>
+                                    <li><a href="#">Дания</a></li>
+                                    <li><a href="#">Исландия</a></li>
+                                    <li><a href="#">Испания</a></li>
+                                    <li><a href="#">Италия</a></li>
+                                    <li><a href="#">Латвия</a></li>
+                                    <li><a href="#">Литва</a></li>
+                                    <li><a href="#">Лихтенштейн</a></li>
+                                    <li><a href="#">Люксембург</a></li>
+                                    <li><a href="#">Мальта</a></li>
+                                    <li><a href="#">Нидерланды</a></li>
+                                    <li><a href="#">Норвегия</a></li>
+                                    <li><a href="#">Польша</a></li>
+                                    <li><a href="#">Португалия</a></li>
+                                    <li><a href="#">Словакия</a></li>
+                                    <li><a href="#">Словения</a></li>
+                                    <li><a href="#">Финляндия</a></li>
+                                    <li><a href="#">Франция</a></li>
+                                    <li><a href="#">Чехия</a></li>
+                                    <li><a href="#">Швейцария</a></li>
+                                    <li><a href="#">Швеция</a></li>
+                                    <li><a href="#">Эстония</a></li>
+                                </ul>
+                                <div class="uk-child-width-expand@m uk-grid-large" uk-grid>
+                                    <div>
+                                        <p>Шенгенское соглашение распространяется на 22 государства ЕС и четыре страны,
+                                            не входящие в него (Исландия, Лихтенштейн, Швейцария и Норвегия). Три самые
+                                            маленькие европейские страны – Ватикан, Монако и Сан-Марино – включены в
+                                            шенгенскую зону де-факто.
+                                        </p>
+                                    </div>
+                                    <div class="uk-width-auto@m">
+                                        <a href="#" class="uk-button uk-button-small uk-button-blue">Подробнее</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="uk-child-width-1-2@s" uk-grid uk-height-match="target: > div > .uk-card">
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/visa_1.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative uk-text-lead">Национальные визы</div>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/visa_2.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative uk-text-lead">Визы по прилете</div>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/visa_3.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative uk-text-lead">Безвизовые страны для россиян</div>
+                                    </a>
+                                </div>
+                                <div>
+                                    <a href="#" class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                        <img src="images/visa_4.jpg" alt="" uk-cover>
+                                        <div class="uk-position-relative uk-text-lead">Визовые нюансы</div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Aside right -->
+                        <aside class="uk-width-medium@m">
+                            <div class="uk-child-width-1-1 uk-grid-medium" uk-grid>
+
+                                <div class="uk-width-expand@s">
+
+                                    <!-- Visas by country -->
+                                    <div>
+                                        <h3>Визы по странам</h3>
+
+                                        <ul class="tm-nav-divider uk-nav uk-margin-remove-bottom uk-background-muted">
+                                            <li><a href="#">Австрия</a></li>
+                                            <li><a href="#">Бельгия </a></li>
+                                            <li><a href="#">Венгрия</a></li>
+                                            <li><a href="#">Германия</a></li>
+                                            <li><a href="#">Греция</a></li>
+                                            <li><a href="#">Дания</a></li>
+                                            <li><a href="#">Исландия</a></li>
+                                            <li><a href="#">Испания</a></li>
+                                            <li><a href="#">Италия</a></li>
+                                            <li><a href="#">Латвия</a></li>
+                                        </ul>
+
+                                        <div>
+                                            <a href="#" class="uk-button uk-button-simple-orange uk-width-1-1">Смотреть еще</a>
+                                        </div>
+                                    </div>
+
+                                </div>
+
+                                <div class="uk-width-auto@s uk-width-1-1@m">
+
+                                    <!--Banner-->
+                                    <a href="#" class="uk-card">
+                                        <img src="images/banner.jpg" alt="" class="uk-width-1-1">
+                                    </a>
+
+                                </div>
+                            </div>
+                        </aside>
+
+                    </div>
+                </div>
+            </div>
+
+            <!-- Interesting in blogs -->
+            <div class="uk-section">
+                <div class="uk-container">
+                    <h2 class="uk-text-center">Интресное в блогах</h2>
+
+                    <div class="uk-child-width-1-2@s uk-child-width-1-4@m" uk-grid uk-height-match="target: > div > .uk-card">
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_1.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Рыжий голый… идейный</div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_2.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о
+                                    вспышке кори в Румынии
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_3.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Самый красочный индийский праздник – Холи</div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_4.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Церемония очищения трупов в Индонезии</div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_5.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Уникальные фото с орбиты земли</div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_6.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Самый красочный индийский праздник – Холи</div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_7.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Ростуризм призвал туроператоров оповещать туристов о
+                                    вспышке кори в Румынии
+                                </div>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#"
+                               class="uk-card uk-card-small uk-card-body uk-cover-container uk-flex uk-flex-bottom uk-light">
+                                <img src="images/interesting_blog_8.jpg" alt="" uk-cover>
+                                <div class="uk-position-relative">Рыжий голый… идейный</div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="uk-margin-medium-top uk-text-center">
+                        <a href="#" class="uk-button uk-button-simple-orange">Перейти в архив</a>
+                    </div>
+                </div>
+            </div>
 
             <!--About project-->
             <div class="uk-section uk-background-secondary uk-text-little">
                 <div class="uk-container uk-text-center">
                     <div class="uk-width-4-5@l uk-margin-auto">
-                        <h2>О проекте</h2>
-                        <p>Tourweek – туристический портал, объединяющий в себе социальную сеть, путеводитель
-                            по 164 странам мира и множество полезных для путешественников сервисов. Мы не разглашаем,
-                            не продаем, не передаем персональную информацию о пользователях третьим лицам. Все отчёты,
-                            отзывы, рассказы и фотографии, опубликованные на сайте www.tourweek.ru являются
-                            интеллектуальной собственностью их авторов. Полная или частичная перепечатка материалов сайта допускается
-                            только с письменного разрешения авторов рассказов.</p>
-                        <p class="uk-margin-medium-top uk-text-bold uk-text-medium">Все пожелания, замечания и
-                            предложения пожалуйста присылайте на info@tourweek.ru</p>
+                        <h2>Поиск попутчиков в путешествие</h2>
+                        <p>Мало кто целенаправленно стремится провести отпуск в одиночестве, чаще всего такая не
+                            радужная перспектива возникает непредвиденно – если, например, друзей, с которыми вы
+                            планировали совершить поездку, не отпускают с работы, или они не хотят ехать в страну,
+                            куда мечтаете отправиться вы. И как же быть в такой непростой ситуации, когда отпуск на
+                            носу, а ехать не с кем?
+                        </p>
+                        <div class="uk-margin-medium-top uk-text-bold">
+                            <a href="#" class="">
+                                Читать далее
+                                <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
