--- a/src/visas.html
+++ b/src/visas.html
@@ -250,7 +250,7 @@
                 </div>
             </div>
 
-            <div class="uk-section uk-section-small">
+            <div class="uk-section">
                 <div class="uk-container">
                     <div class="uk-child-width-expand@m" uk-grid>
 
