--- a/src/visas.html
+++ b/src/visas.html
@@ -449,7 +449,7 @@
                 </div>
             </div>
 
-            <!--About project-->
+            <!-- Search for travel companions -->
             <div class="uk-section uk-background-secondary uk-text-little">
                 <div class="uk-container uk-text-center">
                     <div class="uk-width-4-5@l uk-margin-auto">
@@ -461,7 +461,7 @@
                             носу, а ехать не с кем?
                         </p>
                         <div class="uk-margin-medium-top uk-text-bold">
-                            <a href="#" class="">
+                            <a href="#">
                                 Читать далее
                                 <i class="fa fa-angle-double-down" aria-hidden="true"></i>
                             </a>
@@ -469,6 +469,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
 
         <!--Footer-->
