--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -227,9 +227,24 @@
                         <div>
                             <h2>Виза во Францию для россиян — список документов, цены, как и где оформлять?</h2>
 
-                            <div class="tm-tile-world uk-tile uk-tile-blue uk-text-medium uk-text-primary">
+                            <div class="tm-alert-world uk-alert-primary uk-text-medium" uk-alert>
                                 <p>Гражданам России для въезда во Францию требуется виза.</p>
                             </div>
+
+                            <p>Франция входит в состав стран – участниц Шенгенского соглашения. Поэтому лица, имеющие в
+                                своем паспорте действующие шенгенские визы, могут беспрепятственно въезжать на
+                                территорию страны любым транспортом.
+                            </p>
+                            <p>Документы, необходимые для оформления французской визы, принимаются в визовых центрах
+                                Франции в Москве, Санкт-Петербурге и Екатеринбурге.
+                            </p>
+                            
+                            <ul class="tm-list-globe uk-list">
+                                <li>Cайт посольства Франции – <a href="http://www.ambafrance-ru.org" target="_blank">www.ambafrance-ru.org</a></li>
+                                <li>Cайт посольства Франции – <a href="http://www.ambafrance-ru.org" target="_blank">www.ambafrance-ru.org</a></li>
+                            </ul>
+
+
 
                         </div>
 
