date picker initial

--- a/src/index.html
+++ b/src/index.html
@@ -484,9 +484,11 @@
                                                     <span class="uk-form-icon">
                                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                                     </span>
-                                                                <input class="uk-input" id="form-input-period"
+                                                                <input class="uk-input"
+                                                                       id="form-input-period"
                                                                        type="text"
-                                                                       placeholder="15.02.2017">
+                                                                       placeholder="15.02.2017"
+                                                                       datepicker>
                                                             </div>
                                                         </div>
                                                         <div>
@@ -495,7 +497,8 @@
                                                         <i class="fa fa-calendar" aria-hidden="true"></i>
                                                     </span>
                                                                 <input class="uk-input" type="text"
-                                                                       placeholder="15.02.2017">
+                                                                       placeholder="15.02.2017"
+                                                                       datepicker>
                                                             </div>
                                                         </div>
                                                     </div>
