--- a/src/index.html
+++ b/src/index.html
@@ -216,7 +216,7 @@
                 <div class="uk-section uk-position-relative uk-padding-remove-bottom">
                     <div class="uk-container uk-text-center">
                         <h1>Поиск попутчиков <br>
-                            <span class="uk-text-medium">в путешествие</span>
+                            <span class="uk-text-average">в путешествие</span>
                         </h1>
                         <div class="uk-margin-xlarge-bottom">
                             <a href="" class="uk-button uk-button-large uk-button-blue">Начать поиск</a>
@@ -481,9 +481,9 @@
                                                     <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
                                                         <div>
                                                             <div class="uk-form-controls uk-inline uk-width-1-1">
-                                                    <span class="uk-form-icon">
-                                                        <i class="fa fa-calendar" aria-hidden="true"></i>
-                                                    </span>
+                                                                <span class="uk-form-icon">
+                                                                    <i class="fa fa-calendar" aria-hidden="true"></i>
+                                                                </span>
                                                                 <input class="uk-input"
                                                                        id="form-input-period"
                                                                        type="text"
