--- a/src/visa-text.html
+++ b/src/visa-text.html
@@ -439,7 +439,7 @@
                                     <p>Срок и стоимость оформления визы: <b>20-30 дней</b></p>
                                 </div>
 
-                                <div class="tm-marked tm-marked-orange uk-card uk-card-default uk-card-body uk-text-little">
+                                <div class="tm-marked tm-marked-orange uk-padding uk-background-default uk-box-shadow-small uk-text-little">
                                     <h4>Адрес, по которому высылаются пакеты документов на долгосрочную визу:</h4>
                                     <div class="uk-flex">
                                         <i class="fa fa-map-marker uk-margin-small-right" aria-hidden="true"></i>
