--- a/src/visas.html
+++ b/src/visas.html
@@ -243,8 +243,10 @@
                                         </select>
                                     </div>
                                 </div>
+                                <div class="uk-form-controls">
+                                    <a href="" class="uk-button uk-button-large uk-button-blue">Смотреть</a>
+                                </div>
                             </form>
-                            <a href="" class="uk-button uk-button-large uk-button-blue">Смотреть</a>
                         </div>
                     </div>
                 </div>
