--- a/src/blogs.html
+++ b/src/blogs.html
@@ -261,9 +261,9 @@
                                     <div class="uk-width-auto@l">
 
                                         <!-- Search form -->
-                                        <form action="/" class="">
+                                        <form action="/" class="uk-search">
                                             <div class="uk-flex">
-                                                <input class="uk-input" type="text" placeholder="Поиск по блогам">
+                                                <input class="uk-input" type="search" placeholder="Поиск по блогам">
                                                 <a href="#" class="uk-button uk-button-blue">
                                                     <i class="fa fa-search" aria-hidden="true"></i>
                                                 </a>
