--- a/src/blogs.html
+++ b/src/blogs.html
@@ -242,7 +242,7 @@
                             </div>
 
                             <!-- Filter -->
-                            <div uk-filter="target: .tm-filter-blogs">
+                            <div uk-filter="target: .js-filter-blogs">
 
                                 <div class="uk-child-width-expand@l uk-flex-middle" uk-grid>
                                     <div>
@@ -274,7 +274,7 @@
                                 </div>
 
                                 <!-- Layout items -->
-                                <ul class="tm-filter-blogs uk-list" uk-margin="margin: uk-margin-top">
+                                <ul class="tm-articles-list js-filter-blogs uk-list" uk-margin="margin: uk-margin-top">
                                     <li data-tags="last countries popular discussed">
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
