--- a/src/companions.html
+++ b/src/companions.html
@@ -440,6 +440,110 @@
                             <!-- Listings Found -->
                             <div class="">
                                 <h4>Найдено 106 объявлений</h4>
+
+                                 <!-- Layout items -->
+                                <ul class="tm-articles-list uk-list" uk-margin="margin: uk-margin-top">
+                                    <li>
+                                        <article class="uk-article">
+                                            <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
+                                                <div class="uk-width-auto@s">
+                                                    <div class="uk-padding uk-padding-remove-top">
+                                                        <img src="images/avatar_50x50_1.png" alt=""
+                                                             class="uk-border-circle">
+                                                    </div>
+                                                </div>
+
+                                                <div>
+                                                    <div class="uk-article-meta uk-flex uk-flex-middle">
+                                                        <a href="#">Сергей Иванов</a>
+                                                        <i class="fa fa-chevron-right uk-margin-small-left uk-margin-small-right"
+                                                           aria-hidden="true"></i>
+                                                        <span>Всем</span>
+                                                    </div>
+
+                                                    <h3 class="uk-article-title uk-margin-small-top">Затерянный город
+                                                        Salton Sea на юге штата Калифорния
+                                                    </h3>
+                                                    <p>В 1905 году проливные дожди и таяние снегов вызвали разлив реки
+                                                        Колорадо, в результате чего в одном из районов Калифорнии под
+                                                        названием Солтон Си образовалось большое искусственное озеро.
+                                                    </p>
+
+                                                    <div class="uk-child-width-1-2@s uk-grid-small" uk-grid>
+                                                        <div>
+                                                            <div class="tm-image-shadow">
+                                                                <img src="images/blog_img_1.jpg" alt=""
+                                                                     class="uk-width-1-1">
+                                                            </div>
+                                                        </div>
+                                                        <div>
+                                                            <div class="tm-image-shadow">
+                                                                <img src="images/blog_img_2.jpg" alt=""
+                                                                     class="uk-width-1-1">
+                                                            </div>
+                                                        </div>
+
+                                                        <div class="uk-width-1-1">
+                                                            <div class="tm-article-footer">
+                                                                <div class="uk-text-center">
+                                                                    <a href="#"
+                                                                       class="tm-button-more uk-button uk-button-small uk-button-white">
+                                                                        Читать полностью
+                                                                        <i class="fa fa-angle-double-down"
+                                                                           aria-hidden="true"></i>
+                                                                    </a>
+                                                                </div>
+
+                                                                <div class="uk-child-width-1-2@s uk-child-width-auto@l uk-flex-middle uk-flex-between"
+                                                                     uk-grid>
+                                                                    <div class="uk-text-center uk-text-left@s">
+                                                                        <a href="#" class="uk-text-bold">
+                                                                            <i class="fa fa-comment"
+                                                                               aria-hidden="true"></i>
+                                                                            Добавить комментарий
+                                                                        </a>
+                                                                    </div>
+
+                                                                    <div>
+                                                                        <div class="uk-flex uk-flex-middle uk-flex-center uk-flex-right@s uk-grid-small uk-text-muted"
+                                                                             uk-grid>
+                                                                            <div>
+                                                                                <i class="fa fa-thumbs-o-up"
+                                                                                   aria-hidden="true"></i>
+                                                                                <span>4</span>
+                                                                            </div>
+                                                                            <div>
+                                                                                <i class="fa fa-eye"
+                                                                                   aria-hidden="true"></i>
+                                                                                <span>21</span>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div>
+                                                                        <!--TODO поставить счетчик-->
+                                                                        <div class="uk-text-center uk-text-left@s">Тут
+                                                                            поставить счетчик
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div>
+                                                                        <div class="uk-text-muted uk-text-center uk-text-right@s">
+                                                                            <i class="fa fa-calendar"
+                                                                               aria-hidden="true"></i>
+                                                                            <span>21.03.2017 11:01</span>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </article>
+                                    </li>
+                                </ul>
+
                             </div>
 
                         </div>
