--- a/src/companions.html
+++ b/src/companions.html
@@ -438,7 +438,7 @@
                             <hr>
 
                             <!-- Listings Found -->
-                            <div class="">
+                            <div>
                                 <h4>Найдено 106 объявлений</h4>
 
                                  <!-- Layout items -->
@@ -447,23 +447,44 @@
                                         <article class="uk-article">
                                             <div class="uk-child-width-expand@s uk-grid-collapse" uk-grid>
                                                 <div class="uk-width-auto@s">
-                                                    <div class="uk-padding uk-padding-remove-top">
-                                                        <img src="images/avatar_50x50_1.png" alt=""
+                                                    <div class="uk-padding uk-padding-remove-top uk-text-center">
+                                                        <img src="images/avatar_137x137_1.png" alt=""
                                                              class="uk-border-circle">
+                                                        <h5 class="uk-margin-small-top uk-margin-remove-bottom">Мария</h5>
+                                                        <div class="uk-text-muted uk-text-small">25 лет / Россия, Омск</div>
                                                     </div>
                                                 </div>
 
                                                 <div>
-                                                    <div class="uk-article-meta uk-flex uk-flex-middle">
-                                                        <a href="#">Сергей Иванов</a>
-                                                        <i class="fa fa-chevron-right uk-margin-small-left uk-margin-small-right"
-                                                           aria-hidden="true"></i>
-                                                        <span>Всем</span>
+                                                    <div class="uk-child-width-expand uk-flex-between uk-margin-bottom" uk-grid>
+                                                        <div>
+                                                            <h4>
+                                                                <a href="#">Индия (Дели), c 2 января 2018 по 24 января 2018, на 20-40 ночей</a>
+                                                            </h4>
+                                                        </div>
+                                                        <div class="uk-width-auto">
+                                                            <div class="uk-flex uk-flex-middle uk-text-medium">
+                                                                <div>
+                                                                    <i class="fa fa-female uk-text-danger" aria-hidden="true"></i>
+                                                                </div>
+                                                                <div class="uk-text-small uk-margin-small-right uk-margin-small-left">
+                                                                    <i class="fa fa-arrow-right uk-text-muted" aria-hidden="true"></i>
+                                                                </div>
+                                                                <div>
+                                                                    <i class="fa fa-male uk-text-primary" aria-hidden="true"></i>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
 
-                                                    <h3 class="uk-article-title uk-margin-small-top">Затерянный город
-                                                        Salton Sea на юге штата Калифорния
-                                                    </h3>
+
+                                                    <div class="uk-child-width-expand" uk-grid></div>
+
+
+
+
+
+
                                                     <p>В 1905 году проливные дожди и таяние снегов вызвали разлив реки
                                                         Колорадо, в результате чего в одном из районов Калифорнии под
                                                         названием Солтон Си образовалось большое искусственное озеро.
